== 0.18.2 (TBD)

CAUTION: Database revision was updated due to OrientDB update. Thus only an offline update can be performed.

CAUTION: The generation of the search index document version has been reworked in order to increase index sync performance.
         A triggered index sync will thus re-sync all documents. Triggering the sync action is not required and can be executed at any time.

icon:plus[] OrientDB: The included OrientDB version has been updated to version 2.2.34

icon:check[] REST: Fixed various security related issues.

icon:check[] Core: Image data in binary fields will now only be processed/transformed if the binary is in a readable file format. The readable image file formats are `png`, `jpg`, `bmp` and `gif`.

icon:check[] Core: Added consistency checks for node versions.

icon:check[] Core: Deleting language versions of node will no longer create inconsistencies.

icon:check[] Core: Projects containing multiple releases can now be deleted without error.

[[v0.18.1]]
== 0.18.1 (13.04.2018)

icon:check[] Core: Added consistency check for node containers.

icon:check[] GraphQL: Using filtering with nodes without content does not throw an error anymore.

icon:check[] REST: Added missing `hostname` and `ssl` property handling for release creation requests.

icon:check[] REST: Creating a release with fixed UUID will now invoke the node migration.

icon:check[] Java REST Client: The `eventbus()` method now correctly sends authorization headers.

icon:check[] Java Rest Client: Missing methods to start schema/microschema migrations for a release have been added.

[[v0.18.0]]
== 0.18.0 (06.04.2018)

icon:bullhorn[] GraphQL filtering

[quote]
____
This version of Gentics Mesh introduces _GraphQL filtering_. A detailed description of this feature can be found in our link:https://getmesh.io/docs/beta/graphql.html#_filtering[Documentation].
____

---

CAUTION: Search: The  `/api/v1/search/reindex` endpoint was replaced by `/api/v1/search/sync`.
