@@ -18,6 +18,8 @@ CAUTION: Database revision was updated due to OrientDB update. Thus only an offl
 CAUTION: The generation of the search index document version has been reworked in order to increase index sync performance.
          A triggered index sync will thus re-sync all documents. Triggering the sync action is not required and can be executed at any time.
 
+icon:plus[] Backup/Restore: It is now no longer required to restart the server after a backup has been restored via the `/api/v1/admin/graphdb/restore` endpoint. link:https://github.com/gentics/mesh/issues/387[#387]
+
 icon:plus[] OrientDB: The included OrientDB version has been updated to version 2.2.34
 
 icon:check[] REST: Fixed various security related issues.
